--- a/app/views/backend/product_indicators/_form.html.haml
+++ b/app/views/backend/product_indicators/_form.html.haml
@@ -4,6 +4,7 @@
   =f.input :name
   =f.input :nature, :show => {:measure => :measure_options, :decimal => :decimal_options, :string => :string_options, :choice => :choice_options}
   =f.input :active
+  =f.input :description
 
 =field_set(:measure_options) do
   =f.referenced_association :unit
