--- a/app/views/backend/product_indicators/show.html.haml
+++ b/app/views/backend/product_indicators/show.html.haml
@@ -4,11 +4,19 @@
     -t.sort @product_indicator, {:method=>:post}
   -t.edit @product_indicator
 
-=attributes_list(@product_indicator) do |l|
-  -l.attribute :name
-  -l.attribute :nature
-  -l.attribute :active
+=beehive do |b|
+  -b.tabbox do
+    -b.cell :general do
+      =attributes_list(@product_indicator) do |l|
+        -l.attribute :name
+        -l.attribute :nature
+        -l.attribute :active
+        -l.attribute :description
+    -b.cell(tl(:x_indicators, :count => @product_indicator.data.count)) do
+      =list :indicator_values
 
--if @product_indicator.choice?
-  %h2=tg(:choices)
-  =list :choices
+  -b.tabbox do
+    -if @product_indicator.choice?
+      -b.cell :choice do
+        %h2=tg(:choices)
+        =list :choices
