adding missing relation between product_indicator and product_nature

--- a/app/views/backend/product_indicators/_form.html.haml
+++ b/app/views/backend/product_indicators/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
-  =f.referenced_association :process
+  =f.referenced_association :product_nature
   =f.input :usage
   =f.input :name
   =f.input :nature, :show => {:measure => :measure_options, :decimal => :decimal_options, :string => :string_options, :choice => :choice_options}
