--- a/app/views/backend/animals/show.html.haml
+++ b/app/views/backend/animals/show.html.haml
@@ -1,5 +1,6 @@
 =toolbar do |t|
   -t.edit @animal
+  -t.print @animal
   -t.destroy(@animal, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal.destroyable?
 
 =beehive do |b|
