Removes useless code in CashesController

--- a/app/themes/tekyla/stylesheets/main.css.scss
+++ b/app/themes/tekyla/stylesheets/main.css.scss
@@ -686,6 +686,7 @@ a.selector-dropdown {
 span.selector, .input-append {
   // @include inline-block;
   @include toolbar;
+  position: relative;
 }
 
 
