--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -522,5 +522,6 @@ $include-html-classes: false;
 @import "tables.css.scss";
 // @import "layout.css.scss";
 @import "buttons.css.scss";
+@import "check-boxes.css.scss";
 @import "active-list.css.scss";
 @import "main.css.scss";
