first test with reporting for indicator of matter

--- a/app/views/backend/product_indicator_data/_form.html.haml
+++ b/app/views/backend/product_indicator_data/_form.html.haml
@@ -3,4 +3,4 @@
   =f.referenced_association :indicator
   =f.input :description
   =f.input :created_at
-  =f.input :decimal_value
+  =f.input :value
