--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -514,7 +514,7 @@ $include-html-classes: false;
 
 @import "foundation/components/global";
 @import "foundation/components/grid";
-@import "foundation/components/top-bar";
+// @import "foundation/components/top-bar";
 // @import "foundation/components/buttons";
 
 @import "active-list/minimal";
