--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -3,7 +3,11 @@
     %li.name>
       %h1=link_to("Ekylibre", backend_root_url)
     -for mod in Ekylibre.modules.keys
-      %li=link_to("modules.roots.#{mod}", :controller => :dashboards, :action => mod)
+      %li.separator
+      :ruby
+        attrs = {}
+        attrs[:class] = :active if Ekylibre.module_of(controller.controller_path, action_name) == mod
+      %li{attrs}=link_to("labels.menus.#{mod}".t, {:controller => :dashboards, :action => mod})
 
   -#%section>
     %ul.left>=render(:partial => "layouts/subnavigation", :object => Ekylibre.menu.items, :locals => {:with_divider => true, :depth => 0})
