--- a/app/views/backend/plants/edit.html.haml
+++ b/app/views/backend/plants/edit.html.haml
@@ -1,8 +1,8 @@
 -# Generated automatically. Remove this line to keep your changes.
-=backend_form_for([:backend, @vegetal], (params[:dialog] ? {'data-dialog' => params[:dialog]} : {})) do |f|
+=backend_form_for([:backend, @plant], (params[:dialog] ? {'data-dialog' => params[:dialog]} : {})) do |f|
   -if params[:redirect]
     =hidden_field_tag(:redirect, params[:redirect])
   .form-fields>=render(:partial => 'form', :locals => {:f => f})
   =form_actions do
     =submit_tag(tl(:update), 'data-disable-with' => tl(:please_wait))
-    =link_to(tl(:cancel), backend_vegetal_url(@vegetal), (params[:dialog] ? {'data-close-dialog' => params[:dialog]} : {}))
+    =link_to(tl(:cancel), backend_plant_url(@plant), (params[:dialog] ? {'data-close-dialog' => params[:dialog]} : {}))
