--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -10,7 +10,7 @@ $experimental-support-for-svg: true;
 @import "compass/reset";
 @import "compass/css3";
 @import "compass/utilities";
-@import "font.css.scss"
+@import "font.css.scss";
 
 $symbiols: $icons;
 
