--- a/app/views/backend/sales/index.html.haml
+++ b/app/views/backend/sales/index.html.haml
@@ -3,11 +3,11 @@
   -k.radio :all, :current, :unpaid
   -k.criterion do
     %label=Sale.human_attribute_name(:responsible)
-    =select_tag(:responsible_id, options_for_select([[]]+Entity.all.collect{|u| [u.label, u.id]}, params[:responsible_id]))
+    =select_tag(:responsible_id, options_for_select([[]] + Entity.all.collect{|u| [u.label, u.id]}, params[:responsible_id]))
 
 =toolbar do |t|
   -t.link :new
   -t.link :statistics
-  -t.print_sales Date.today.to_s, :action=>:index, :controller=>:sales
+  -# t.print_sales Date.today.to_s, :action=>:index, :controller=>:sales
 
 =list
