--- a/app/views/backend/land_parcel_groups/_form.html.haml
+++ b/app/views/backend/land_parcel_groups/_form.html.haml
@@ -1,2 +1,15 @@
-=field_set do
+=field_set(:major => true) do
+  =f.referenced_association :nature
   =f.input :name
+  =f.input :identification_number
+  =f.input :description, :field => :text
+  =f.input :born_at
+  =f.input :area_measure
+  =f.referenced_association :area_unit
+
+=field_set(:details) do
+  =f.input :number
+  =f.referenced_association :unit
+  =f.input :active
+  =f.input :external
+  =f.referenced_association :owner
