--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,7 +1,9 @@
 %nav#top
   %ul>
     %li.name>
-      %h1=link_to("Ekylibre", backend_root_url)
+      =link_to(backend_root_url) do
+        %i
+        %h1="Ekylibre"
     -for mod in Ekylibre::Modules.hash.keys
       %li.separator
       :ruby
